# impersonate-gpt

./: .gitignore  Dockerfile  README.md  app.py  backend.py  create_data_sft.py  create_data_sft.sh  create_splits.py  flask_app.py  impersonate_dataset.py  impersonate_trainer.py  launch_train_session.py  modal_upload.py  modal_upload_file.py  model_upload_folder.py  pyproject.toml  schemas.py  train_configs.py  train_sft.py
.github/workflows/: build-and-deploy.yml
data/: darwin-voyage_of_the_beagle.txt  dickens-david_copperfield.txt  dickens-great_expectations.txt  dickens-oliver_twist.txt  dostoevsky-brothers_karamazov.txt  dostoevsky-notes_from_the_underground.txt  dostoevsky-the_idiot.txt  doyle-a_study_in_scarlet.txt  doyle-the_hound_of_baskervilles.txt  doyle-the_lost_world.txt  doyle-the_poison_belt.txt  doyle-the_sign_of_the_four.txt  fitzgerald-beautiful_and_damned.txt  fitzgerald-flappers_and_philosophers.txt  fitzgerald-great_gatsby.txt  fitzgerald-tales_of_the_jazz_age.txt  fitzgerald-this_side_of_paradise.txt  twain-connecticut_yankee_king_arthurs_court.txt  twain-the_prince_and_the_pauper.txt  twain-tom_sawyer.txt
data_books/: dickens-hard_times.txt
data_books/darwin/: darwin-coral_reefs.txt
data_books/dickens/: dickens-tale_of_two_cities.txt
data_books/dostoevsky/: dostoevsky-crime_and_punishment.txt  dostoevsky-the_gambler.txt
data_books/twain/: twain-huckleberry_finn.txt
data_sft/: create_all.sh
