[tool.poetry]
name = "fine-tuning"
version = "0.1.0"
description = ""
authors = ["Justin Pyron <justinpyron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pandas = "^2.2.3"
torch = "^2.5.1"
jupyterlab = "^4.3.4"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
transformers = "^4.47.1"
tokenizers = "^0.21.0"
accelerate = "^1.2.1"
evaluate = "^0.4.3"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
