[tool.poetry]
name = "impersonate-gpt"
version = "0.1.0"
description = ""
authors = ["Justin Pyron <justinpyron@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
numpy = "^2.2.1"
pandas = "^2.2.3"
torch = "^2.5.1"
jupyterlab = "^4.3.4"
ipykernel = "^6.29.5"
seaborn = "^0.13.2"
transformers = "^4.47.1"
tokenizers = "^0.21.0"
pre-commit = "^4.0.1"
streamlit = "^1.41.1"
flask = "^3.1.0"
huggingface-hub = "<1.0"
modal = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
